# galenic

./: .flake8  .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  vite.config.mts
backend/: admin.py  apps.py  dictionary.py  endpoints.py  models.py
backend/functions/: auth.py  chat.py  graphic.py  libraries.py  management.py  robot.py  test_image_base64.py
backend/migrations/: 0001_initial.py  0002_preparation_code.py  0003_remove_mixing_type_mixing_pattern_mixing_tool.py  0004_rename_mixing_action_remove_preparation_container_and_more.py  0005_remove_container_type_remove_grid_type.py  0006_grid_keywords.py
backend/poetry_scripts/: server.py
backend/pybcapclient/: bcapclient.py  orinexception.py  variant.py
backend/templates/: base.html
backend/templatetags/: render_vite_bundle.py
backend/utils/: date.py  response.py  string.py
django_project_conf/: settings.py  urls.py  wsgi.py
frontend/: .env.example  .eslintrc  .prettierrc  index.html  tsconfig.json
frontend/public/: global.css
frontend/src/: index.tsx
frontend/src/assets/: AuthBackground.tsx
frontend/src/components/: Dot.tsx  Loadable.tsx  Loader.tsx  MainCard.tsx  SimpleBar.tsx  ToastContainer.tsx  Transitions.tsx  loadingSpinner.tsx
frontend/src/menu-items/: define.ts  homepage.ts  index.ts  libraries.ts  management.ts  types.ts
frontend/src/pages/: changePassword.tsx
frontend/src/routes/: AdminRoutes.tsx  AuthRoutes.tsx  MainRoutes.tsx  ProtectedRoute.tsx  UserRoutes.tsx  index.ts
frontend/src/services/: api.ts  endpoints.ts
(+107 files in other folders)
